--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HTML Grid with Icons</title>
+    <title>Animal Care and Responsibility</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <script src="script.js"></script>
+    <h1>Animal Care and Responsibility</h1>
+
+    <!-- Animal Information Grid -->
     <div class="grid-container">
         <div class="grid-item">
             <img src="ikona1.png" alt="Icon for Saikne un uzticība">
@@ -41,9 +43,10 @@
         </div>
     </div>
 
+    <!-- Accordion Section -->
     <div class="accordion">
         <div class="accordion-item">
-            <div class="accordion-header" onclick="toggleAccordion(this)">
+            <div class="accordion-header">
                 Apsvērt, pirms mājdzīvnieka iegādes?
                 <span class="arrow">▼</span>
             </div>
@@ -56,7 +59,7 @@
             </div>
         </div>
         <div class="accordion-item">
-            <div class="accordion-header" onclick="toggleAccordion(this)">
+            <div class="accordion-header">
                 Ko iesākt, ja tomēr nevarat vairs parūpēties?
                 <span class="arrow">▼</span>
             </div>
@@ -70,7 +73,7 @@
             </div>
         </div>
         <div class="accordion-item">
-            <div class="accordion-header" onclick="toggleAccordion(this)">
+            <div class="accordion-header">
                 Kā rīkoties, ja pamanat pamestu mājdzīvnieku?
                 <span class="arrow">▼</span>
             </div>
@@ -84,3 +87,10 @@
             </div>
         </div>
     </div>
+
+    <!-- Button to Go to Puzzle -->
+    <button id="start-button" onclick="window.location.href = 'spele.html';">Start Puzzle</button>
+
+    <script src="script.js"></script>
+</body>
+</html>
