Spēle tagad funkcione perfekti atlicis tikai pievienot php un sql

--- a/spele.html
+++ b/spele.html
@@ -20,6 +20,8 @@
     <!-- Link back to the main page -->
     <button onclick="window.location.href = 'index.html';">Back to Main Page</button>
 
-    <script src="script.js"></script>
+    <img src="puzzle/puzzle.jpg" id="pilnabilde">
+
+    <script src="puzzle.js"></script>
 </body>
 </html>
