Nepabeidzu php pusi no darba un nepaspēju pabeigt CSS jo tur ir daudz problemas

--- a/index.html
+++ b/index.html
@@ -3,11 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Animal Care and Responsibility</title>
+    <title>Pamestība sāp. Mīlestība glābj.</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Animal Care and Responsibility</h1>
+    <h1>Pamestība sāp. Mīlestība glābj.</h1>
+
+    <!-- Dark Mode Toggle Button -->
+    <button id="dark-mode-toggle" onclick="toggleDarkMode()">🌙</button>
+
+    Ziemassvētku laiks ir brīdis, kad īpaši izjūtam mīlestības, rūpju un dāvināšanas nozīmi. Mājdzīvnieki - mūsu uzticamākie draugi - sniedz mums beznosacījumu mīlestību, bet daudzi no tiem cieš no pamestības un vientulības. Šajos svētkos aicinām ikvienu atcerēties arī par tiem, kuri mūs uztver kā visu savu pasauli! Parūpēsimies, lai neviens dzīvnieks nepaliek novārtā, un kopā radīsim pasauli, kurā mīlestība un rūpes tiek ikkatram, arī četrkājainajiem ģimenes locekļiem.
 
     <!-- Animal Information Grid -->
     <div class="grid-container">
